# internity

./: .gitignore  CHANGES.md  docker-compose.yaml  docker-compose.yml  instructions.md  package.json  turbo.json
apps/server/: .gitignore  README.md  index.ts  package.json  pyproject.toml  tsconfig.json
apps/server/app/: config.py  deps.py  main.py  responses.py
apps/server/app/core/: jwt.py  plans.py  storage.py
apps/server/app/db/: models.py  session.py
apps/server/app/routers/: _student_subresource.py  application.py  auth.py  company.py  employer.py  listing.py  saved.py  student.py  upload.py
apps/server/app/schemas/: application.py  auth.py  company.py  employer.py  upload.py
apps/server/app/services/: notification.py
apps/server/scripts/: wrap-controllers.mjs
apps/server/src/: db.ts  index.ts
apps/server/src/class/: response_writer.ts
apps/server/src/config/: config.env.ts  config.ts
apps/server/src/core/: jwt.ts  plans.ts  storage.ts  support-token.ts
apps/server/src/lib/: minio.ts  plans.ts
apps/server/src/middleware/: auth.ts  error.ts  middleware.auth.ts  middleware.company-member.ts  middleware.role.ts
apps/server/src/router/: routes.ts
apps/server/src/routes/: routes.ts
apps/server/src/scripts/: backfill-payments-to-company.ts
apps/server/src/services/: notifications.ts  service.notification.ts  support-agent.ts  welcome-message.ts  zego-token.ts
apps/server/src/socket/: socket.chat.ts  socket.connection_manager.ts  socket.custom.ts  socket.db_services.ts
apps/server/src/types/: express.d.ts  types.socket.ts
(+524 files in other folders)
