[project]
name = "server"
version = "0.1.0"
description = "Internshala clone — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "pyjwt[crypto]>=2.10",
    "boto3>=1.36",
    "razorpay>=1.4",
    "cuid>=0.4",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
